--- a/Stats preview card component/style.css
+++ b/Stats preview card component/style.css
@@ -1,3 +1,13 @@
 body {
     background-color: #0a0c1b;
 }
+
+.imagem-principal {
+    display: inline-block;
+    align-items: right;
+}
+
+.texto-principal {
+    color: white;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
